Allow interdependency of discovered and produces/provider injectables
This is an overhaul of how extensions interact with each other in order to correctly detect injectables that may need to be provided by another extension first. Failing extensions are retried if needed when more injectables have become available.